Fix: fix the hover effect on safari

--- a/instagram-frontend/src/scenes/User/components/UserHeader/userHeader.scss
+++ b/instagram-frontend/src/scenes/User/components/UserHeader/userHeader.scss
@@ -14,6 +14,10 @@
     background-position-x: center;
     position: relative;
     overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
     &__hover {
       position: absolute;
       top: 50%;
